Fix toolbar overflow

--- a/src/client/components/global.scss
+++ b/src/client/components/global.scss
@@ -1434,7 +1434,7 @@ aside.emoji-picker-react {
   display: flex;
   position: fixed;
   top: 0;
-  height: 100%;
+  height: calc(100% - 6rem);
   margin-top: 3rem;
   align-items: flex-start;
 }
